# unlicense

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  mise.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
tests/: crate_is_unlicensed.rs
