[package]
name = "unlicense"
version = "0.2.0"
edition = "2021"
authors = ["Remo Senekowitsch"]
description = "Access the text of the Unlicense. <https://unlicense.org>"
readme = "README.md"
repository = "https://github.com/senekor/unlicense"
license = "Unlicense"
keywords = ["license", "copyright"]
categories = ["command-line-utilities"]

# don't publish unnecessary files to crates.io
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    # apple builds are currently failing.
    # one might try to enable this again later
    # (e.g. with a new version of cargo-dist)
    # "aarch64-apple-darwin",
    # "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
