[package]
name = "unlicense"
version = "0.2.0"
edition = "2021"
authors = ["Remo Senekowitsch"]
description = "Access the text of the Unlicense. <https://unlicense.org>"
readme = "README.md"
repository = "https://github.com/senekor/unlicense"
license = "Unlicense"
keywords = ["license", "copyright"]
categories = ["command-line-utilities"]

# don't publish unnecessary files to crates.io
exclude = [".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
